fix links on MOBILE NAV for professionals and public

--- a/less/_navbar.less
+++ b/less/_navbar.less
@@ -218,6 +218,10 @@
 	&.navbar--public {
 		.nav-left {
 		    padding-right: 60px;
+
+		    @media all and (max-width: @screen-md) {
+    			padding-right: 0;
+    		}
 		}
 
 		.nav-right {
